--- a/main.html
+++ b/main.html
@@ -10,15 +10,13 @@
 	<!-- the entire body must be written by student -->
 	<form action="submit_feedback.php" method="post">
 	<label for="name">Name:</label>	
-	<input type="text" id="name" name="name" minlength="3" maxlength="50" required><br>
+	<input type="text" id="name"  minlength="3" maxlength="50" required><br>
     <label for="portfolio">Portfolio:</label>
-	<input type="url" id="portfolio" name="portfolio" required><br>
+	<input type="url" id="portfolio" required><br>
 	<label for="favColor">Favorite Color:</label>
-	<input type="color" id="favColor" name="favColor"> <br>
+	<input type="color" id="favColor"><br>
 	<label for="likeness">Likeness:</label>	
-	<input type="range" id="likeness" name="likeness" min="1" max="100"><br>
-	<input type="submit" value="submit">	
-	</form>
+	<input type="range" id="likeness" min="1" max="100"><br>
     <script type="text/javascript" src="./script.js">
 </script>
 
